[package]
name = "nativelink-config"
version = "0.5.3"
edition = "2021"

[features]
crd = []

[dependencies]
byte-unit = { version = "5.1.4", default-features = false, features = ["byte"] }
humantime = "2.1.0"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = "1.0.132"
serde_json5 = "0.1.0"
shellexpand = { version = "3.1.0", default-features = false, features = ["base-0"] }
schemars = "0.8.21"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["std"] }
